Week6/y.output
State 132 conflicts: 2 shift/reduce
State 153 conflicts: 2 reduce/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY RCB

    2 HEADERS: HEADER HEADERS
    3        | HEADER

    4 HEADER: HASH INCLUDE LT HEADER_FILE GT
    5       | HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    6 HEADER2: HEADER2 VAR DIV
    7        | DIV
    8        | %empty

    9 BODY: DECLARATION_STATEMENTS BODY2

   10 BODY2: %empty
   11      | DECLARATION_STATEMENTS BODY2
   12      | PROGRAM_STATEMENTS BODY2

   13 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST SC

   14 VAR_LIST: VAR COMA VAR_LIST
   15         | ARRAY_DECLARATION COMA VAR_LIST
   16         | PTR_VAR VAR_LIST
   17         | VAR
   18         | ARRAY_DECLARATION
   19         | PTR_VAR

   20 PTR_VAR: PTR_DEPTH VAR

   21 PTR_DEPTH: MUL PTR_DEPTH
   22          | MUL

   23 ARRAY_DECLARATION: VAR ARRAY_SIZE

   24 ARRAY_SIZE: ARRAY_SIZE LSQRB NUMBER RSQRB
   25           | LSQRB NUMBER RSQRB

   26 MAIN_TYPE: INT

   27 DATA_TYPE: INT
   28          | CHAR
   29          | FLOAT
   30          | DOUBLE

   31 PROGRAM_STATEMENTS: VAR_EXPN1 SC
   32                   | SC
   33                   | VAR_EXPN2 SC
   34                   | LB LOGICAL_EXPN RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB
   35                   | IF LB LOGICAL_EXPN RB LCB BODY2 RCB
   36                   | IF LB LOGICAL_EXPN RB LCB BODY2 RCB ELSE LCB BODY2 RCB
   37                   | WHILE LB LOGICAL_EXPN RB LCB BODY2 RCB
   38                   | DO LCB BODY2 RCB WHILE LB LOGICAL_EXPN RB SC
   39                   | FOR LB VAR_EXPN1 SC LOGICAL_EXPN SC VAR_EXPN2 RB LCB BODY2 RCB

   40 LOGICAL_EXPN: NOT LB LOGICAL_EXPN1 RB
   41             | LOGICAL_EXPN1

   42 LOGICAL_EXPN1: LOGICAL_EXPN1 LOGICAL_OPERATOR LOGICAL_EXPN1
   43              | LOGICAL_EXPN2
   44              | NOT LB LOGICAL_EXPN1 RB
   45              | LB LOGICAL_EXPN1 RB

   46 LOGICAL_EXPN2: A_EXPN COMP_OPERATOR A_EXPN

   47 COMP_OPERATOR: ET
   48              | GT
   49              | LT
   50              | GTE
   51              | LTE
   52              | NE

   53 LOGICAL_OPERATOR: AMPER AMPER
   54                 | OR

   55 VAR_EXPN1: VAR EQ A_EXPN
   56          | VAR_ARRAY_ACCESS_LHS EQ A_EXPN

   57 VAR_EXPN2: VAR ARRAY_ACCESS UNARY_OPERATORS
   58          | VAR UNARY_OPERATORS

   59 VAR_ARRAY_ACCESS_LHS: VAR ARRAY_ACCESS

   60 VAR_ARRAY_ACCESS_RHS: VAR ARRAY_ACCESS

   61 ARRAY_ACCESS: ARRAY_ACCESS LSQRB VAR RSQRB
   62             | ARRAY_ACCESS LSQRB NUMBER RSQRB
   63             | LSQRB VAR RSQRB
   64             | LSQRB NUMBER RSQRB

   65 A_EXPN: A_EXPN PLUS A_EXPN
   66       | A_EXPN MINUS A_EXPN
   67       | A_EXPN1

   68 A_EXPN1: A_EXPN1 MUL A_EXPN1
   69        | A_EXPN1 DIV A_EXPN1
   70        | A_EXPN1 MOD A_EXPN1
   71        | A_EXPN2

   72 A_EXPN2: A_EXPN2 EXP A_EXPN2
   73        | A_EXPN3

   74 A_EXPN3: LB A_EXPN RB
   75        | NUMBER
   76        | VAR UNARY_OPERATORS
   77        | VAR
   78        | VAR_ARRAY_ACCESS_RHS UNARY_OPERATORS
   79        | VAR_ARRAY_ACCESS_RHS

   80 UNARY_OPERATORS: UPLUS
   81                | UMINUS


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HASH (258) 4 5
    INCLUDE (259) 4 5
    HEADER_FILE (260) 4 5
    MAIN (261) 1
    LB (262) 1 34 35 36 37 38 39 40 44 45 74
    RB (263) 1 34 35 36 37 38 39 40 44 45 74
    LCB (264) 1 34 35 36 37 38 39
    RCB (265) 1 34 35 36 37 38 39
    LSQRB (266) 24 25 61 62 63 64
    RSQRB (267) 24 25 61 62 63 64
    SC (268) 13 31 32 33 38 39
    COLON (269) 34
    QMARK (270) 34
    COMA (271) 14 15
    IF (272) 35 36
    ELSE (273) 36
    FOR (274) 39
    DO (275) 38
    WHILE (276) 37 38
    VAR <var_name> (277) 6 14 17 20 23 55 57 58 59 60 61 63 76 77
    NUMBER (278) 24 25 62 64 75
    ET (279) 47
    EQ (280) 55 56
    GT (281) 4 48
    LT (282) 4 49
    GTE (283) 50
    LTE (284) 51
    NE (285) 52
    AMPER (286) 53
    OR (287) 54
    NOT (288) 40 44
    DQUOTE (289) 5
    PLUS (290) 65
    MINUS (291) 66
    MUL (292) 21 22 68
    DIV (293) 6 7 69
    MOD (294) 70
    EXP (295) 72
    UPLUS (296) 80
    UMINUS (297) 81
    INT <data_type> (298) 26 27
    CHAR <data_type> (299) 28
    FLOAT <data_type> (300) 29
    DOUBLE <data_type> (301) 30


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    prm (48)
        on left: 1
        on right: 0
    HEADERS (49)
        on left: 2 3
        on right: 1 2
    HEADER (50)
        on left: 4 5
        on right: 2 3
    HEADER2 (51)
        on left: 6 7 8
        on right: 5 6
    BODY (52)
        on left: 9
        on right: 1
    BODY2 (53)
        on left: 10 11 12
        on right: 9 11 12 34 35 36 37 38 39
    DECLARATION_STATEMENTS (54)
        on left: 13
        on right: 9 11
    VAR_LIST (55)
        on left: 14 15 16 17 18 19
        on right: 13 14 15 16
    PTR_VAR (56)
        on left: 20
        on right: 16 19
    PTR_DEPTH (57)
        on left: 21 22
        on right: 20 21
    ARRAY_DECLARATION (58)
        on left: 23
        on right: 15 18
    ARRAY_SIZE (59)
        on left: 24 25
        on right: 23 24
    MAIN_TYPE (60)
        on left: 26
        on right: 1
    DATA_TYPE <data_type> (61)
        on left: 27 28 29 30
        on right: 13
    PROGRAM_STATEMENTS (62)
        on left: 31 32 33 34 35 36 37 38 39
        on right: 12
    LOGICAL_EXPN (63)
        on left: 40 41
        on right: 34 35 36 37 38 39
    LOGICAL_EXPN1 (64)
        on left: 42 43 44 45
        on right: 40 41 42 44 45
    LOGICAL_EXPN2 (65)
        on left: 46
        on right: 43
    COMP_OPERATOR (66)
        on left: 47 48 49 50 51 52
        on right: 46
    LOGICAL_OPERATOR (67)
        on left: 53 54
        on right: 42
    VAR_EXPN1 (68)
        on left: 55 56
        on right: 31 39
    VAR_EXPN2 (69)
        on left: 57 58
        on right: 33 39
    VAR_ARRAY_ACCESS_LHS (70)
        on left: 59
        on right: 56
    VAR_ARRAY_ACCESS_RHS (71)
        on left: 60
        on right: 78 79
    ARRAY_ACCESS (72)
        on left: 61 62 63 64
        on right: 57 59 60 61 62
    A_EXPN (73)
        on left: 65 66 67
        on right: 46 55 56 65 66 74
    A_EXPN1 (74)
        on left: 68 69 70 71
        on right: 67 68 69 70
    A_EXPN2 (75)
        on left: 72 73
        on right: 71 72
    A_EXPN3 (76)
        on left: 74 75 76 77 78 79
        on right: 73
    UNARY_OPERATORS (77)
        on left: 80 81
        on right: 57 58 76 78


State 0

    0 $accept: . prm $end

    HASH  shift, and go to state 1

    prm      go to state 2
    HEADERS  go to state 3
    HEADER   go to state 4


State 1

    4 HEADER: HASH . INCLUDE LT HEADER_FILE GT
    5       | HASH . INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE

    INCLUDE  shift, and go to state 5


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 6


State 3

    1 prm: HEADERS . MAIN_TYPE MAIN LB RB LCB BODY RCB

    INT  shift, and go to state 7

    MAIN_TYPE  go to state 8


State 4

    2 HEADERS: HEADER . HEADERS
    3        | HEADER .

    HASH  shift, and go to state 1

    $default  reduce using rule 3 (HEADERS)

    HEADERS  go to state 9
    HEADER   go to state 4


State 5

    4 HEADER: HASH INCLUDE . LT HEADER_FILE GT
    5       | HASH INCLUDE . DQUOTE HEADER2 HEADER_FILE DQUOTE

    LT      shift, and go to state 10
    DQUOTE  shift, and go to state 11


State 6

    0 $accept: prm $end .

    $default  accept


State 7

   26 MAIN_TYPE: INT .

    $default  reduce using rule 26 (MAIN_TYPE)


State 8

    1 prm: HEADERS MAIN_TYPE . MAIN LB RB LCB BODY RCB

    MAIN  shift, and go to state 12


State 9

    2 HEADERS: HEADER HEADERS .

    $default  reduce using rule 2 (HEADERS)


State 10

    4 HEADER: HASH INCLUDE LT . HEADER_FILE GT

    HEADER_FILE  shift, and go to state 13


State 11

    5 HEADER: HASH INCLUDE DQUOTE . HEADER2 HEADER_FILE DQUOTE

    DIV  shift, and go to state 14

    $default  reduce using rule 8 (HEADER2)

    HEADER2  go to state 15


State 12

    1 prm: HEADERS MAIN_TYPE MAIN . LB RB LCB BODY RCB

    LB  shift, and go to state 16


State 13

    4 HEADER: HASH INCLUDE LT HEADER_FILE . GT

    GT  shift, and go to state 17


State 14

    7 HEADER2: DIV .

    $default  reduce using rule 7 (HEADER2)


State 15

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 . HEADER_FILE DQUOTE
    6 HEADER2: HEADER2 . VAR DIV

    HEADER_FILE  shift, and go to state 18
    VAR          shift, and go to state 19


State 16

    1 prm: HEADERS MAIN_TYPE MAIN LB . RB LCB BODY RCB

    RB  shift, and go to state 20


State 17

    4 HEADER: HASH INCLUDE LT HEADER_FILE GT .

    $default  reduce using rule 4 (HEADER)


State 18

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE . DQUOTE

    DQUOTE  shift, and go to state 21


State 19

    6 HEADER2: HEADER2 VAR . DIV

    DIV  shift, and go to state 22


State 20

    1 prm: HEADERS MAIN_TYPE MAIN LB RB . LCB BODY RCB

    LCB  shift, and go to state 23


State 21

    5 HEADER: HASH INCLUDE DQUOTE HEADER2 HEADER_FILE DQUOTE .

    $default  reduce using rule 5 (HEADER)


State 22

    6 HEADER2: HEADER2 VAR DIV .

    $default  reduce using rule 6 (HEADER2)


State 23

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB . BODY RCB

    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    BODY                    go to state 28
    DECLARATION_STATEMENTS  go to state 29
    DATA_TYPE               go to state 30


State 24

   27 DATA_TYPE: INT .

    $default  reduce using rule 27 (DATA_TYPE)


State 25

   28 DATA_TYPE: CHAR .

    $default  reduce using rule 28 (DATA_TYPE)


State 26

   29 DATA_TYPE: FLOAT .

    $default  reduce using rule 29 (DATA_TYPE)


State 27

   30 DATA_TYPE: DOUBLE .

    $default  reduce using rule 30 (DATA_TYPE)


State 28

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY . RCB

    RCB  shift, and go to state 31


State 29

    9 BODY: DECLARATION_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 39
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 30

   13 DECLARATION_STATEMENTS: DATA_TYPE . VAR_LIST SC

    VAR  shift, and go to state 45
    MUL  shift, and go to state 46

    VAR_LIST           go to state 47
    PTR_VAR            go to state 48
    PTR_DEPTH          go to state 49
    ARRAY_DECLARATION  go to state 50


State 31

    1 prm: HEADERS MAIN_TYPE MAIN LB RB LCB BODY RCB .

    $default  reduce using rule 1 (prm)


State 32

   34 PROGRAM_STATEMENTS: LB . LOGICAL_EXPN RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB

    LB      shift, and go to state 51
    VAR     shift, and go to state 52
    NUMBER  shift, and go to state 53
    NOT     shift, and go to state 54

    LOGICAL_EXPN          go to state 55
    LOGICAL_EXPN1         go to state 56
    LOGICAL_EXPN2         go to state 57
    VAR_ARRAY_ACCESS_RHS  go to state 58
    A_EXPN                go to state 59
    A_EXPN1               go to state 60
    A_EXPN2               go to state 61
    A_EXPN3               go to state 62


State 33

   32 PROGRAM_STATEMENTS: SC .

    $default  reduce using rule 32 (PROGRAM_STATEMENTS)


State 34

   35 PROGRAM_STATEMENTS: IF . LB LOGICAL_EXPN RB LCB BODY2 RCB
   36                   | IF . LB LOGICAL_EXPN RB LCB BODY2 RCB ELSE LCB BODY2 RCB

    LB  shift, and go to state 63


State 35

   39 PROGRAM_STATEMENTS: FOR . LB VAR_EXPN1 SC LOGICAL_EXPN SC VAR_EXPN2 RB LCB BODY2 RCB

    LB  shift, and go to state 64


State 36

   38 PROGRAM_STATEMENTS: DO . LCB BODY2 RCB WHILE LB LOGICAL_EXPN RB SC

    LCB  shift, and go to state 65


State 37

   37 PROGRAM_STATEMENTS: WHILE . LB LOGICAL_EXPN RB LCB BODY2 RCB

    LB  shift, and go to state 66


State 38

   55 VAR_EXPN1: VAR . EQ A_EXPN
   57 VAR_EXPN2: VAR . ARRAY_ACCESS UNARY_OPERATORS
   58          | VAR . UNARY_OPERATORS
   59 VAR_ARRAY_ACCESS_LHS: VAR . ARRAY_ACCESS

    LSQRB   shift, and go to state 67
    EQ      shift, and go to state 68
    UPLUS   shift, and go to state 69
    UMINUS  shift, and go to state 70

    ARRAY_ACCESS     go to state 71
    UNARY_OPERATORS  go to state 72


State 39

    9 BODY: DECLARATION_STATEMENTS BODY2 .

    $default  reduce using rule 9 (BODY)


State 40

   11 BODY2: DECLARATION_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 73
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 41

   12 BODY2: PROGRAM_STATEMENTS . BODY2

    LB      shift, and go to state 32
    SC      shift, and go to state 33
    IF      shift, and go to state 34
    FOR     shift, and go to state 35
    DO      shift, and go to state 36
    WHILE   shift, and go to state 37
    VAR     shift, and go to state 38
    INT     shift, and go to state 24
    CHAR    shift, and go to state 25
    FLOAT   shift, and go to state 26
    DOUBLE  shift, and go to state 27

    $default  reduce using rule 10 (BODY2)

    BODY2                   go to state 74
    DECLARATION_STATEMENTS  go to state 40
    DATA_TYPE               go to state 30
    PROGRAM_STATEMENTS      go to state 41
    VAR_EXPN1               go to state 42
    VAR_EXPN2               go to state 43
    VAR_ARRAY_ACCESS_LHS    go to state 44


State 42

   31 PROGRAM_STATEMENTS: VAR_EXPN1 . SC

    SC  shift, and go to state 75


State 43

   33 PROGRAM_STATEMENTS: VAR_EXPN2 . SC

    SC  shift, and go to state 76


State 44

   56 VAR_EXPN1: VAR_ARRAY_ACCESS_LHS . EQ A_EXPN

    EQ  shift, and go to state 77


State 45

   14 VAR_LIST: VAR . COMA VAR_LIST
   17         | VAR .
   23 ARRAY_DECLARATION: VAR . ARRAY_SIZE

    LSQRB  shift, and go to state 78
    COMA   shift, and go to state 79

    $default  reduce using rule 17 (VAR_LIST)

    ARRAY_SIZE  go to state 80


State 46

   21 PTR_DEPTH: MUL . PTR_DEPTH
   22          | MUL .

    MUL  shift, and go to state 46

    $default  reduce using rule 22 (PTR_DEPTH)

    PTR_DEPTH  go to state 81


State 47

   13 DECLARATION_STATEMENTS: DATA_TYPE VAR_LIST . SC

    SC  shift, and go to state 82


State 48

   16 VAR_LIST: PTR_VAR . VAR_LIST
   19         | PTR_VAR .

    VAR  shift, and go to state 45
    MUL  shift, and go to state 46

    $default  reduce using rule 19 (VAR_LIST)

    VAR_LIST           go to state 83
    PTR_VAR            go to state 48
    PTR_DEPTH          go to state 49
    ARRAY_DECLARATION  go to state 50


State 49

   20 PTR_VAR: PTR_DEPTH . VAR

    VAR  shift, and go to state 84


State 50

   15 VAR_LIST: ARRAY_DECLARATION . COMA VAR_LIST
   18         | ARRAY_DECLARATION .

    COMA  shift, and go to state 85

    $default  reduce using rule 18 (VAR_LIST)


State 51

   45 LOGICAL_EXPN1: LB . LOGICAL_EXPN1 RB
   74 A_EXPN3: LB . A_EXPN RB

    LB      shift, and go to state 51
    VAR     shift, and go to state 52
    NUMBER  shift, and go to state 53
    NOT     shift, and go to state 86

    LOGICAL_EXPN1         go to state 87
    LOGICAL_EXPN2         go to state 57
    VAR_ARRAY_ACCESS_RHS  go to state 58
    A_EXPN                go to state 88
    A_EXPN1               go to state 60
    A_EXPN2               go to state 61
    A_EXPN3               go to state 62


State 52

   60 VAR_ARRAY_ACCESS_RHS: VAR . ARRAY_ACCESS
   76 A_EXPN3: VAR . UNARY_OPERATORS
   77        | VAR .

    LSQRB   shift, and go to state 67
    UPLUS   shift, and go to state 69
    UMINUS  shift, and go to state 70

    $default  reduce using rule 77 (A_EXPN3)

    ARRAY_ACCESS     go to state 89
    UNARY_OPERATORS  go to state 90


State 53

   75 A_EXPN3: NUMBER .

    $default  reduce using rule 75 (A_EXPN3)


State 54

   40 LOGICAL_EXPN: NOT . LB LOGICAL_EXPN1 RB
   44 LOGICAL_EXPN1: NOT . LB LOGICAL_EXPN1 RB

    LB  shift, and go to state 91


State 55

   34 PROGRAM_STATEMENTS: LB LOGICAL_EXPN . RB QMARK LCB BODY2 RCB COLON LCB BODY2 RCB

    RB  shift, and go to state 92


State 56

   41 LOGICAL_EXPN: LOGICAL_EXPN1 .
   42 LOGICAL_EXPN1: LOGICAL_EXPN1 . LOGICAL_OPERATOR LOGICAL_EXPN1

    AMPER  shift, and go to state 93
    OR     shift, and go to state 94

    $default  reduce using rule 41 (LOGICAL_EXPN)

    LOGICAL_OPERATOR  go to state 95


State 57

   43 LOGICAL_EXPN1: LOGICAL_EXPN2 .

    $default  reduce using rule 43 (LOGICAL_EXPN1)


State 58

   78 A_EXPN3: VAR_ARRAY_ACCESS_RHS . UNARY_OPERATORS
   79        | VAR_ARRAY_ACCESS_RHS .

    UPLUS   shift, and go to state 69
    UMINUS  shift, and go to state 70

    $default  reduce using rule 79 (A_EXPN3)

    UNARY_OPERATORS  go to state 96


State 59

   46 LOGICAL_EXPN2: A_EXPN . COMP_OPERATOR A_EXPN
   65 A_EXPN: A_EXPN . PLUS A_EXPN
   66       | A_EXPN . MINUS A_EXPN

    ET     shift, and go to state 97
    GT     shift, and go to state 98
    LT     shift, and go to state 99
    GTE    shift, and go to state 100
    LTE    shift, and go to state 101
    NE     shift, and go to state 102
    PLUS   shift, and go to state 103
    MINUS  shift, and go to state 104

    COMP_OPERATOR  go to state 105


State 60
